HFP-3168 reintroduced contrast shadow to button

--- a/scripts/components/Shared/NavigationButtonLabel.scss
+++ b/scripts/components/Shared/NavigationButtonLabel.scss
@@ -76,6 +76,11 @@ $labelWidth: 9em;
       top: 50%;
       left: 50%;
     }
+
+    .nav-label-expand-arrow:before {
+      top: calc(-50% - 1px);
+    }
+
     .nav-label {
       min-width: $labelWidth;
       overflow: scroll;
@@ -148,6 +153,7 @@ $labelWidth: 9em;
 
       &:before {
         color: #ffffff;
+        top: calc(-50% + 1px);
       }
     }
   }
