--- a/scripts/components/Shared/NavigationButtonLabel.scss
+++ b/scripts/components/Shared/NavigationButtonLabel.scss
@@ -27,19 +27,19 @@ $labelWidth: 11em;
       top: -2em;
       &-arrow:before,
       &-arrow:after {
-          transform: rotate(0deg) translate(-50%,-50%) !important;
+          transform: rotate(0deg) translate(-50%,-50%);
       }
       &-arrow:before {
-        top: calc(-50% - 1px) !important;
+        top: calc(-50% - 1px);
       }
     }
     &.is-expanded .nav-label-expand .nav-label-expand-arrow {
       &:before, 
       &:after {
-        transform: rotate(180deg) translate(50%, 50%) !important;
+        transform: rotate(180deg) translate(50%, 50%);
       }
       &:before {
-        top: calc(-50% + 1px) !important;
+        top: calc(-50% + 1px);
       }
     }
   }
