--- a/scripts/components/Shared/NavigationButtonLabel.scss
+++ b/scripts/components/Shared/NavigationButtonLabel.scss
@@ -81,6 +81,33 @@ $labelWidth: 11em;
     }
   }
 
+  /* &.expand-up {
+    //bottom: ($buttonSize / 2);
+    top: unset;
+    bottom: 50%;
+    transform: translateY(-50%);
+    .nav-label-expand {
+      //bottom: 2;
+      //top: -2em;
+      &-arrow:before,
+      &-arrow:after {
+        transform: rotate(0deg) translate(-50%, -50%);
+      }
+      &-arrow:before {
+        top: calc(-50% - 1px);
+      }
+    }
+    &.is-expanded .nav-label-expand .nav-label-expand-arrow {
+      &:before,
+      &:after {
+        transform: rotate(180deg) translate(50%, 50%);
+      }
+      &:before {
+        top: calc(-50% + 1px);
+      }
+    }
+  } */
+
   &.hover-only {
     display: none;
 
@@ -109,6 +136,9 @@ $labelWidth: 11em;
       .nav-label-inner {
         text-overflow: unset;
         white-space: normal;
+        display: block;
+        -webkit-line-clamp: unset;
+        -webkit-box-orient: unset;
       }
     }
   }
@@ -129,8 +159,10 @@ $labelWidth: 11em;
   &-inner {
     text-overflow: ellipsis;
     overflow: hidden;
-    white-space: nowrap;
     text-align: left;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
   }
 
   &-expand {
