--- a/scripts/components/Main.scss
+++ b/scripts/components/Main.scss
@@ -25,3 +25,7 @@
 .h5p-three-image [tabIndex="-1"] {
   outline: none;
 }
+
+.h5p-editor-three-image-wrapper .h5p-editing-overlay {
+  z-index: 4;
+}
