HFP-3190 Reduce size of dragging icon in 360

--- a/scripts/components/Scene/SceneTypes/ThreeSixtyScene.scss
+++ b/scripts/components/Scene/SceneTypes/ThreeSixtyScene.scss
@@ -13,6 +13,7 @@
 
     background: url('../../../assets/moving-icon.svg');
     background-size: 100% 100%;
+    font-size: 0.5em;
   }
 
   &.focused .context-menu {
