HFP-3174 Show label on focus when it is hover only

--- a/scripts/components/Shared/NavigationButtonLabel.scss
+++ b/scripts/components/Shared/NavigationButtonLabel.scss
@@ -227,3 +227,17 @@ $arrowDownTop: calc(-50% + 1px);
     max-width: unset;
   }
 }
+.nav-button-wrapper:focus {
+  .nav-label-container.hover-only {
+    display: block;
+    .nav-label {
+      max-width: unset;
+    }
+  }
+}
+.nav-button-wrapper .nav-label-container.hover-only.nav-button-focused {
+  display: block;
+  .nav-label {
+    max-width: unset;
+  }
+}
