Show only two lines on hover after design changes

--- a/scripts/components/Shared/NavigationButtonLabel.scss
+++ b/scripts/components/Shared/NavigationButtonLabel.scss
@@ -103,8 +103,7 @@ $arrowDownTop: calc(-50% + 1px);
   }
 
   &.hover-only {
-    display: none;
-
+    visibility: hidden;
     .nav-label-inner {
       text-overflow: unset;
       overflow: auto;
@@ -166,13 +165,13 @@ $arrowDownTop: calc(-50% + 1px);
 
   &.is-multiline .nav-label {
     min-width: $labelMaxWidth;
-   .nav-label-inner {
+    .nav-label-inner {
       white-space: initial;
     }
   }
   &.can-expand .nav-label {
     min-width: $labelMaxWidth;
-   .nav-label-inner {
+    .nav-label-inner {
       white-space: initial;
     }
   }
@@ -226,22 +225,25 @@ $arrowDownTop: calc(-50% + 1px);
   }
 }
 .nav-button-wrapper:hover .nav-label-container.hover-only {
-  display: block;
+  visibility: visible;
   .nav-label {
-    max-width: unset;
+    max-width: $labelMaxWidth;
+    max-height: 3em;
   }
 }
 .nav-button-wrapper:focus {
   .nav-label-container.hover-only {
-    display: block;
+    visibility: visible;
     .nav-label {
-      max-width: unset;
+      max-width: $labelMaxWidth;
+      max-height: 3em;
     }
   }
 }
 .nav-button-wrapper .nav-label-container.hover-only.nav-button-focused {
-  display: block;
+  visibility: visible;
   .nav-label {
-    max-width: unset;
+    max-width: $labelMaxWidth;
+    max-height: 3em;
   }
 }
