Prevented video controls being cropped

--- a/scripts/components/Dialog/Dialog.scss
+++ b/scripts/components/Dialog/Dialog.scss
@@ -30,7 +30,7 @@
   top: 50%;
   width: 80%;
   max-width: 93%;
-  max-height: 87%;
+  max-height: 90%;
   background: white;
   z-index: 1;
   padding: 2em;
@@ -69,8 +69,9 @@
   }
 }
 .h5p-medium-tablet-size .h5p-text-dialog {
-  width: 90%;
-  padding: 0.5em;
+  width: 86%;
+  margin: 0em;
+  padding: 0.25em;
 }
 .h5p-text-content {
   flex: 1;
