--- a/scripts/components/Shared/NavigationButtonLabel.scss
+++ b/scripts/components/Shared/NavigationButtonLabel.scss
@@ -121,11 +121,7 @@ $arrowDownTop: calc(-50% + 1px);
     .nav-label {
       max-width: unset;
       .nav-label-inner {
-        text-overflow: unset;
-        white-space: normal;
-        display: block;
-        -webkit-line-clamp: unset;
-        -webkit-box-orient: unset;
+        -webkit-line-clamp: 14;
       }
     }
     .nav-label-expand-button {
@@ -153,11 +149,12 @@ $arrowDownTop: calc(-50% + 1px);
     font-size: 0.9em;
     min-width: $labelMinWidth;
     max-width: $labelMaxWidth;
+    max-height: 20.5em;
 
     .nav-label-inner {
       white-space: pre;
       text-overflow: ellipsis;
-      overflow-y: hidden;
+      overflow: hidden;
       text-align: left;
       display: -webkit-box;
       -webkit-line-clamp: 2;
