added HUD button for going back to first scene

--- a/scripts/components/HUD/Buttons/Button/Button.scss
+++ b/scripts/components/HUD/Buttons/Button/Button.scss
@@ -81,6 +81,9 @@
   &.reset:before {
     content: $reset;
   }
+  &.goToStart:before {
+    content: $goToStart;
+  }
   &.submit-dialog:before {
     content: " ";
     background-image: url('../../../../../assets/the-h5p-star.svg');
