--- a/scripts/styles/icons.scss
+++ b/scripts/styles/icons.scss
@@ -2,6 +2,7 @@
 $info: "\e906";
 $question: "\e905";
 $goToScene: "\e907";
+$goToStart: "\e917";
 $goBack: "\e903";
 $sceneDescription: "\e909";
 $audioOn: "\e90a";
