added changes to components/

--- a/scripts/components/HUD/Buttons/Button/Button.scss
+++ b/scripts/components/HUD/Buttons/Button/Button.scss
@@ -81,7 +81,7 @@
   &.reset:before {
     content: $reset;
   }
-  &.goToStart:before {
+  &.go-to-start:before {
     content: $goToStart;
   }
   &.submit-dialog:before {
