--- a/scripts/styles/icons.scss
+++ b/scripts/styles/icons.scss
@@ -11,6 +11,9 @@ $noicon: "\1F605";
 $reset: "\e901";
 $submitdialog: "\2744";
 $noscene: "\e900";
+$video: "\e918";
+$image: "\e919";
+$info-mark: "\e91a";
 
 $edit: "\e90f";
 $delete: "\e910";
