added inactive state on goToStartBtn when it is at start scene, added different text telling user why btn is disabled when at start scene, added keyboard focus-support for tooltips on buttons

--- a/scripts/components/HUD/Buttons/Button/Button.scss
+++ b/scripts/components/HUD/Buttons/Button/Button.scss
@@ -37,7 +37,7 @@
     height: 0.75em;
     position: absolute;
   }
-  &:hover .tooltip {
+  &:hover .tooltip, &:focus-within .tooltip {
     visibility: visible;
     opacity: 1;
     transition-delay: 0s;
@@ -121,7 +121,7 @@
       transform: translateX(130%) translateY(-50%) rotate(45deg);
     }
   }
-  .btn-wrap:hover .tooltip {
+  .btn-wrap:hover .tooltip, .btn-wrap:focus-within .tooltip {
     bottom: 140%;
   }
 }
