--- a/scripts/components/HUD/Buttons/Button/Button.scss
+++ b/scripts/components/HUD/Buttons/Button/Button.scss
@@ -37,10 +37,18 @@
     height: 0.75em;
     position: absolute;
   }
-  &:hover .tooltip, &:focus-within .tooltip {
+  @mixin tooltip-styling {
     visibility: visible;
     opacity: 1;
     transition-delay: 0s;
+  }
+
+  &:hover .tooltip {
+    @include tooltip-styling;
+  }
+  
+  &:focus-within .tooltip {
+    @include tooltip-styling;
   }
 }
 .hud-btn {
