rewrote password dialog for to be used only in Main, went away from InteractionContent as in previous commit, started on design for password prompt, changes in semantics for enabling password on any library

--- a/scripts/styles/icons.scss
+++ b/scripts/styles/icons.scss
@@ -15,6 +15,8 @@ $noscene: "\e900";
 $video: "\e918";
 $image: "\e919";
 $info-mark: "\e91a";
+$lock-icon: "\e91b";
+$unlock-icon: "\e91c";
 
 $edit: "\e90f";
 $delete: "\e910";
